<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="aboutALC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_to_alc_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcome_to_alc_4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FD090808"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#F05A26"
        android:onClick="aboutALC"
        android:text="@string/about_alc"
        app:layout_constraintEnd_toEndOf="@+id/welcome_to_alc_4"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/welcome_to_alc_4"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_alc_4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F05A26"
        android:onClick="myProfile"
        android:text="@string/my_profile"
        app:layout_constraintEnd_toEndOf="@+id/about_alc"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/about_alc"
        app:layout_constraintTop_toBottomOf="@+id/about_alc" />

</android.support.constraint.ConstraintLayout>